MDEV-18284 using JSON_COMPACT with JSON_OBJECT

JSON casting using JSON_COMPACT doesn't always work with values from subqueries.